# prism-core

./: .env.development  .env.docker  .env.example  .env.example.dev  .env.production  .env.production.template  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTIVATE_USER.md  ACTIVATE_USER_NOW.md  ACTIVATION_GUIDE.md  ACTIVATION_SOLUTION.md  AI_CONFIGURATION_GUIDE.md  AI_CONFIG_SUCCESS.md  AI_FEATURES_SPEC.md  AI_FRONTEND_IMPLEMENTATION_SUMMARY.md  AI_PROVIDER_STRATEGY.md  ANNOUNCEMENT.md  ANNOUNCEMENT_TEMPLATE.md  ARCHITECTURE.md  AUTHENTICATION_RESOLVED.md  AUTH_TROUBLESHOOTING_GUIDE.md  BACKEND_DELETE_ISSUE.md  BUILD_STRATEGY_GUIDE.md  CHANGELOG.md  CI_CD_PIPELINE_GUIDE.md  CLAUDE.md  CLAUDE_API_COST_ANALYSIS.md  CLAUDE_UPDATE_NOTES.md  CLAUDE_UPDATE_SUMMARY.md  CLAUDE_UPDATE_SUMMARY_FINAL.md  CLAUDE_UPDATE_SUMMARY_v0.14.25.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETE_FLOW_GUIDE.md  CONFIGURE_AI_PRODUCTION.md  CONTRIBUTING-old.md  CONTRIBUTING.md  CORS_CONFIGURATION_UPDATE.md  (+157 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md  security_vulnerability.md
.github/workflows/: cd.yml  ci-cd-pipeline.yml  ci.yml  codeql.yml  dependency-review.yml  deploy-free-tier.yml  frontend.yml  labeler.yml  manual-backup.yml  release.yml  security-scanning.yml  stale.yml  test.yml
backend/: .coveragerc  .env.example  __init__.py  alembic.ini  check_user.py  create_migration.py  docker_check_user.py  fix_login_direct.py  pytest.ini
backend/alembic/: env.py
backend/migrations/: env.py
backend/scripts/: __init__.py  activate_user.py  check_user.py  clear_auth_cache.py  create_database.py  fix_user_login.py  init_db.py  run_tests.sh
backend/src/: __init__.py  main.py  main_enhanced.py  main_simple.py  main_temp.py
backend/tests/: __init__.py  conftest.py  factories.py  test_health.py
docker/postgres/: init.sql
docs/: API_REFERENCE.md  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_TROUBLESHOOTING.md  FREE_TIER_OPERATIONS.md  PROJECT_STRUCTURE.md  README.md  REGION_OPTIMIZATION.md
docs/getting-started/: quick-start.md
frontend/: .editorconfig  .env.example  .eslintrc.json  .gitignore  .npmrc  .prettierrc.json  DEPLOYMENT-CHECKLIST.md  Dockerfile  Dockerfile.dev  STARTUP_GUIDE.md  debug-login.js  fix-login-issue.md  jest.config.js  jest.setup.js  middleware.ts  monitor-prism-render.sh  next.config.js  package-lock.json  package.json  playwright.config.ts  render-cli-guide.md  start.sh  tailwind.config.ts  tsconfig.json  vercel.json
frontend/.husky/: commit-msg
frontend/.storybook/: main.ts  manager.ts  preview.tsx
frontend/docs/: AUTH_DEBUG_GUIDE.md  AUTH_ERROR_HANDLING.md
frontend/public/: clear-auth.html  clear-org-cache.html  clear-session.html  delete-org.html  fix-auth.html  manifest.json  test-project-creation.html
frontend/scripts/: clear-auth-sessions.ts  debug-vercel-deployment.sh  monitor-vercel.sh  test-auth.ts
helm/prism/: Chart.yaml  values.yaml
infrastructure/docker/: backend.Dockerfile
k8s/argocd/: app-of-apps.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  rbac.yaml  (+5 more)
scripts/: activate_user.py  build-enterprise.sh  build-local-dev.sh  check-backend-status.sh  check-both-deployments.sh  check-render-env.py  check-render-status.sh  configure-ai.sh  debug-render-env.py  delete-existing-org.sh  deploy-to-free-tier.sh  deploy-to-render.sh  deployment-recovery.sh  deployment-status.sh  detect-compose.sh  dev-start.sh  dev-stop.sh  dev.sh  fix-npm-deployment.sh  fix-org-modal.sh  fix-org-navigation.sh  fix-render-config.md  fix-vercel-deployment.sh  fix-vercel-npm.sh  force-delete-org.sh  force-vercel-empty-commit.sh  generate-secrets.sh  get-jwt-token.sh  monitor-activation-status.sh  monitor-deployment.sh  monitor-render-deployment.sh  monitor-vercel.sh  prepare-deployment.sh  process-redis-config.sh  quick-deploy.sh  quick-fix-deployment.sh  quick-start-alt-ports.sh  quick-start.sh  render-cli-helper.sh  seed_data.py  (+13 more)
(+214 files in other folders)
